2005-05-06  John W. Eaton  <jwe@octave.org>

	* dbleCHOL.cc (CHOL::init): Use xelem instead of elem for indexing
	chol_mat.
	(chol2mat_internal, chol2mat, CHOL::inverse): New functions.
	* dbleCHOL.h (chol2mat_internal, chol2mat, CHOL::inverse):
	Provide decls.

	* CmplxChol.cc (ComplexCHOL::init): Use xelem instead of elem for
	indexing chol_mat.
	(chol2mat_internal, chol2mat, ComplexCHOL::inverse): New functions.
	* CmplxCHOL.h (chol2mat_internal, chol2mat, CmplxCHOL::inverse):
	Provide decls.

2005-05-05  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::permute): Call chop_trailing_singletons on
	retval before return.

2005-05-04  John W. Eaton  <jwe@octave.org>

	* cmd-edit.cc (gnu_readline::do_readline): Extract const char*
	from prompt outside of INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE block.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LINK_DEPS): List $(UMFPACK_LIBS) ahead of $(BLAS_LIBS).
	From Dmitri A. Sergatskov <dasergatskov@gmail.com>.

2005-04-29  David Bateman  <dbateman@free.fr>

	* dSparse.cc (trisolve): Diagonal passed to lapack zptsv is type
	double.  Correct indexing for upper diagonal elements for sparse
	tridiagonal.
	* CSparse.cc (trisolve): ditto.

	* CSparse.h (UMFPACK_ZNAME): Define macro to pick version of
	UMFPACK for 64-bit.
	* CSparse.cc (UMFPACK_ZNAME): Replace all umfpack_zi_* with 
	UMFPACK_ZNAME(*).
	* SparseCmplxLU.cc (UMFPACK_ZNAME): ditto

	* dSparse.h (UMFPACK_DNAME): Define macro to pick version of
	UMFPACK for 64-bit.
	* dSparse.cc (UMFPACK_DNAME): Replace all umfpack_di_* with 
	UMFPACK_DNAME(*).
	* SparsedbleLU.cc (UMFPACK_DNAME): ditto

	* dSparse.cc (ltsolve, utsolve): Correct permuted upper/lower
	triangular back/forward substitution code.
	* CSparse.cc (ltsolve, utsolve): ditto.

	* dSparse.cc (solve): Use mattype.type (false) to force messaging
	from spparms("spumoni",1).
	* CSparse.cc (solve): ditto

	* SparseType.cc (SparseType(void)): Print info for
	spparms("spumoni",1).